Update ingest programs

--- a/notebooks/picogreen_yields.ipynb
+++ b/notebooks/picogreen_yields.ipynb
@@ -160,12 +160,12 @@
     "has_yield = pd.to_numeric(pico['ng_microliter_mean'], errors='coerce').notna()\n",
     "\n",
     "yields = pd.to_numeric(pico[has_id & has_yield]['ng_microliter_mean'])\n",
-    "yields.count()"
+    "yields.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
