Ingest Nitfix 1 expedition

--- a/notebooks/ingest_google_sheets.ipynb
+++ b/notebooks/ingest_google_sheets.ipynb
@@ -26,8 +26,7 @@
     "from oauth2client import tools\n",
     "from oauth2client.file import Storage\n",
     "\n",
-    "import lib.db as db\n",
-    "import lib.google as google"
+    "import lib.db as db"
    ]
   },
   {
@@ -45,18 +44,6 @@
    "metadata": {},
    "source": [
     "### Constants for working with Google Sheets API"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "MASTER_TAXONOMY = '14J1_gHf4g4BHfG-qVJTx3Z296xyXPIXWNAGRx0uReWk'\n",
-    "SAMPLE_PLATES = '1uPOtAuu3VQUcVkRsY4q2GtfeFrs1l9udkyNEaxvqjmA'\n",
-    "GENBANK_LOCI = '1TQjJWVrdToNr6E5AhWhIQ3PdX8uMQSI7qD5MYyUHazU'\n",
-    "PICOGREEN = '1uXI4-m8xmy50ljxghGnN3zEjF9K2bqXkghin9mWf_0o'"
    ]
   },
   {
