--- a/notebooks/ingest_images.ipynb
+++ b/notebooks/ingest_images.ipynb
@@ -58,7 +58,8 @@
     "        CREATE TABLE images (\n",
     "            sample_id TEXT PRIMARY KEY NOT NULL,\n",
     "            file_name TEXT NOT NULL UNIQUE\n",
-    "        )\"\"\")"
+    "        )\"\"\")\n",
+    "    CXN.execute(\"\"\"CREATE INDEX image_idx ON images (sample_id)\"\"\")"
    ]
   },
   {
