Create a new table mapping taxon sample IDs to scientific names

--- a/notebooks/ingest_google_sheets.ipynb
+++ b/notebooks/ingest_google_sheets.ipynb
@@ -13,20 +13,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os\n",
-    "from os.path import join, exists\n",
-    "import argparse\n",
     "from pathlib import Path\n",
     "\n",
     "import pandas as pd\n",
     "\n",
-    "import httplib2\n",
-    "from apiclient import discovery\n",
-    "from oauth2client import client\n",
-    "from oauth2client import tools\n",
-    "from oauth2client.file import Storage\n",
-    "\n",
-    "import lib.db as db"
+    "import lib.db as db\n",
+    "import lib.util as util\n",
+    "import lib.google as google"
    ]
   },
   {
@@ -36,117 +29,8 @@
    "outputs": [],
    "source": [
     "CXN = db.connect()\n",
-    "INTERIM_DATA = Path('..') / 'data' / 'interim'"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Constants for working with Google Sheets API"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "SCOPES = 'https://www.googleapis.com/auth/drive'\n",
-    "CREDENTIALS = 'drive-nitfix.json'\n",
-    "APPLICATION = 'Google Drive API Python'\n",
-    "SECRETS = 'data/secrets/client_drive_secrets.json'\n",
-    "VERSION = 'v3'"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Export Google Sheet"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Validate the user's credentials from storage or prompt for new credentials."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def get_credentials():\n",
-    "    home_dir = os.path.expanduser('~')\n",
-    "    credential_dir = join(home_dir, '.credentials')\n",
-    "    if not exists(credential_dir):\n",
-    "        os.makedirs(credential_dir)\n",
-    "    credential_path = join(credential_dir, CREDENTIALS)\n",
-    "\n",
-    "    store = Storage(credential_path)\n",
-    "    credentials = store.get()\n",
-    "    if not credentials or credentials.invalid:\n",
-    "        flow = client.flow_from_clientsecrets(SECRETS, SCOPES)\n",
-    "        flow.user_agent = APPLICATION\n",
-    "        flags = argparse.ArgumentParser(\n",
-    "            parents=[tools.argparser]).parse_args()\n",
-    "        credentials = tools.run_flow(flow, store, flags)\n",
-    "        print('Storing credentials to ' + credential_path)\n",
-    "    return credentials"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Get the Google Drive API"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def get_service(google_app):\n",
-    "    credentials = get_credentials()\n",
-    "    http = credentials.authorize(httplib2.Http())\n",
-    "    return discovery.build(google_app, VERSION, http=http)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Export the Google Sheet"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def export_sheet_csv(sheet_name, csv_file):\n",
-    "    service = get_service('drive')\n",
-    "    files = service.files().list(\n",
-    "        q='name=\"{}\" and mimeType=\"{}\"'.format(\n",
-    "            sheet_name, 'application/vnd.google-apps.spreadsheet'),\n",
-    "        orderBy='modifiedTime desc,name').execute().get('files', [])\n",
-    "\n",
-    "    data = service.files().export(\n",
-    "        fileId=files[0]['id'], mimeType='text/csv').execute()\n",
-    "\n",
-    "    if not data:\n",
-    "        raise FileNotFoundError(\n",
-    "            'Could not read Google sheet {}'.format(sheet_name))\n",
-    "\n",
-    "    csv_file.write(data)\n",
-    "    csv_file.flush()\n",
-    "    csv_file.seek(0)"
+    "INTERIM_DATA = Path('..') / 'data' / 'interim'\n",
+    "PROCESSED_DATA = Path('..') / 'data' / 'processed'"
    ]
   },
   {
@@ -158,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {
     "scrolled": false
    },
@@ -289,18 +173,20 @@
        "4         NaN           NaN  Anisophyllea  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "csv_path = INTERIM_DATA / 'taxons.csv'\n",
+    "csv_name = 'taxonomy.csv'\n",
+    "\n",
+    "csv_path = INTERIM_DATA / csv_name\n",
     "\n",
     "with open(csv_path, 'wb') as csv_out:\n",
-    "    export_sheet_csv('NitFixMasterTaxonomy', csv_out)\n",
+    "    google.export_sheet_csv('NitFixMasterTaxonomy', csv_out)\n",
     "\n",
-    "df = pd.read_csv(\n",
+    "taxonomy = pd.read_csv(\n",
     "    csv_path,\n",
     "    header=0,\n",
     "    names=[\n",
@@ -314,9 +200,136 @@
     "        'provider_id',\n",
     "        'quality_notes',\n",
     "    ])\n",
-    "df['genus'] = df['scientific_name'].str.split().str[0]\n",
+    "taxonomy['genus'] = taxonomy.scientific_name.str.split().str[0]\n",
     "\n",
-    "df.to_sql('taxons', CXN, if_exists='replace')\n",
+    "taxonomy.to_sql('taxons', CXN, if_exists='replace')\n",
+    "\n",
+    "csv_path = PROCESSED_DATA / csv_name\n",
+    "taxonomy.to_csv(csv_path, index=False)\n",
+    "\n",
+    "taxonomy.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Map Sample IDs to Scientific Names"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>family</th>\n",
+       "      <th>genus</th>\n",
+       "      <th>sample_id</th>\n",
+       "      <th>scientific_name</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Begoniaceae</td>\n",
+       "      <td>Begonia</td>\n",
+       "      <td>a44674eb-9a44-469e-a63f-8d062d9e1c60</td>\n",
+       "      <td>Begonia acerifolia</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Begoniaceae</td>\n",
+       "      <td>Begonia</td>\n",
+       "      <td>4360e849-b172-4ed9-973f-c5899b17842c</td>\n",
+       "      <td>Begonia acetosella</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Begoniaceae</td>\n",
+       "      <td>Begonia</td>\n",
+       "      <td>45ed57c1-fcbc-4aca-adaa-1c3938c9cf24</td>\n",
+       "      <td>Begonia almedana</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Begoniaceae</td>\n",
+       "      <td>Begonia</td>\n",
+       "      <td>45e91b4e-fca1-485e-9dce-bb030900a807</td>\n",
+       "      <td>Begonia angustiloba</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Begoniaceae</td>\n",
+       "      <td>Begonia</td>\n",
+       "      <td>45e3b5f1-9f85-4b15-b96c-ca03aca2148d</td>\n",
+       "      <td>Begonia aptera</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        family    genus                             sample_id  \\\n",
+       "0  Begoniaceae  Begonia  a44674eb-9a44-469e-a63f-8d062d9e1c60   \n",
+       "1  Begoniaceae  Begonia  4360e849-b172-4ed9-973f-c5899b17842c   \n",
+       "2  Begoniaceae  Begonia  45ed57c1-fcbc-4aca-adaa-1c3938c9cf24   \n",
+       "3  Begoniaceae  Begonia  45e91b4e-fca1-485e-9dce-bb030900a807   \n",
+       "4  Begoniaceae  Begonia  45e3b5f1-9f85-4b15-b96c-ca03aca2148d   \n",
+       "\n",
+       "       scientific_name  \n",
+       "0   Begonia acerifolia  \n",
+       "1   Begonia acetosella  \n",
+       "2     Begonia almedana  \n",
+       "3  Begonia angustiloba  \n",
+       "4       Begonia aptera  "
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "csv_name = 'taxon_ids.csv'\n",
+    "\n",
+    "taxons = []\n",
+    "for key, taxon in taxonomy.iterrows():\n",
+    "    guids = util.split_uuids(taxon.sample_ids)\n",
+    "    for guid in guids:\n",
+    "        taxons.append({\n",
+    "            'sample_id': guid,\n",
+    "            'scientific_name': taxon.scientific_name,\n",
+    "            'family': taxon.family,\n",
+    "            'genus': taxon.genus\n",
+    "        })\n",
+    "\n",
+    "df = pd.DataFrame(taxons)\n",
+    "\n",
+    "df.to_sql('taxon_ids', CXN, if_exists='replace')\n",
+    "\n",
+    "csv_path = PROCESSED_DATA / csv_name\n",
+    "df.to_csv(csv_path, index=False)\n",
     "\n",
     "df.head()"
    ]
@@ -348,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {
     "scrolled": false
    },
@@ -480,17 +493,19 @@
        "4  b5bc9a61-1be8-4d9c-9722-6ebe5fa0f244   A    1  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "csv_path = INTERIM_DATA / 'plates.csv'\n",
+    "csv_name = 'sample_plates.csv'\n",
+    "\n",
+    "csv_path = INTERIM_DATA / csv_name\n",
     "step = 14\n",
     "\n",
     "with open(csv_path, 'wb') as csv_out:\n",
-    "    export_sheet_csv('sample_plates', csv_out)\n",
+    "    google.export_sheet_csv('sample_plates', csv_out)\n",
     "\n",
     "df = pd.read_csv(csv_path)\n",
     "\n",
@@ -507,7 +522,7 @@
     "\n",
     "plates = pd.concat(plates, axis=1, ignore_index=True)\n",
     "\n",
-    "# Append per well information with the per plate information\n",
+    "# Append per well information with the per plate information for each well\n",
     "row_start = 6\n",
     "rows = 'ABCDEFGH'\n",
     "wells = []\n",
@@ -538,6 +553,9 @@
     "\n",
     "wells.to_sql('plates', CXN, if_exists='replace')\n",
     "\n",
+    "csv_path = PROCESSED_DATA / csv_name\n",
+    "df.to_csv(csv_path, index=False)\n",
+    "\n",
     "wells.head()"
    ]
   },
@@ -545,12 +563,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "\n",
     "### Ingest the Picogreen Sheet"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -660,16 +679,18 @@
        "4    2_15_18  d07a86d9-dab9-45c9-a547-36b15ccc1dd7  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "csv_path = INTERIM_DATA / 'picogreen.csv'\n",
+    "csv_name = 'picogreen.csv'\n",
+    "\n",
+    "csv_path = INTERIM_DATA / csv_name\n",
     "\n",
     "with open(csv_path, 'wb') as csv_out:\n",
-    "    export_sheet_csv('picogreen_2_14_2_15', csv_out)\n",
+    "    google.export_sheet_csv('picogreen_2_14_2_15', csv_out)\n",
     "\n",
     "df = pd.read_csv(\n",
     "    csv_path,\n",
@@ -687,6 +708,9 @@
     "\n",
     "df.to_sql('picogreen', CXN, if_exists='replace')\n",
     "\n",
+    "csv_path = PROCESSED_DATA / csv_name\n",
+    "df.to_csv(csv_path, index=False)\n",
+    "\n",
     "df.head()"
    ]
   },
@@ -699,7 +723,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -790,16 +814,18 @@
        "4  Abarema agropecuaria    0     0     0     0     0"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "csv_path = INTERIM_DATA / 'loci.csv'\n",
+    "csv_name = 'genbank_loci.csv'\n",
+    "\n",
+    "csv_path = INTERIM_DATA / csv_name\n",
     "\n",
     "with open(csv_path, 'wb') as csv_out:\n",
-    "    export_sheet_csv('genbank_loci', csv_out)\n",
+    "    google.export_sheet_csv('genbank_loci', csv_out)\n",
     "\n",
     "df = pd.read_csv(\n",
     "    csv_path,\n",
@@ -807,6 +833,9 @@
     "    names=['scientific_name', 'its', 'atpb', 'matk', 'matr', 'rbcl'])\n",
     "\n",
     "df.to_sql('loci', CXN, if_exists='replace')\n",
+    "\n",
+    "csv_path = PROCESSED_DATA / csv_name\n",
+    "df.to_csv(csv_path, index=False)\n",
     "\n",
     "df.head()"
    ]
