--- a/notebooks/ingest_images.ipynb
+++ b/notebooks/ingest_images.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,6 +17,7 @@
     "from pathlib import Path\n",
     "from collections import namedtuple\n",
     "\n",
+    "import pandas as pd\n",
     "from PIL import Image, ImageFilter\n",
     "import exifread\n",
     "import zbarlight\n",
@@ -29,14 +30,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "Dimensions = namedtuple('Dimensions', 'width height')\n",
     "\n",
     "CXN = db.connect()\n",
-    "RAW_DATA = Path('..') / 'data' / 'raw'"
+    "RAW_DATA = Path('..') / 'data' / 'raw'\n",
+    "PROCESSED_DATA = Path('..') / 'data' / 'processed'"
    ]
   },
   {
@@ -474,6 +476,216 @@
     "path = RAW_DATA / 'NY_visit_2'\n",
     "\n",
     "ingest_images(path)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Put data into a CSV file"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>sample_id</th>\n",
+       "      <th>file_name</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>6fcdf583-e9bb-4764-84de-f277cc6ec6b7</td>\n",
+       "      <td>../data/raw/DOE-nitfix_specimen_photos/R000000...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>6fa18219-4958-4d75-8bf3-032fa909315c</td>\n",
+       "      <td>../data/raw/DOE-nitfix_specimen_photos/R000000...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>6f93bea8-43f4-45ad-95f5-ecad63f13037</td>\n",
+       "      <td>../data/raw/DOE-nitfix_specimen_photos/R000000...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>6f66cc88-3583-4e9b-97ea-03b1d681def8</td>\n",
+       "      <td>../data/raw/DOE-nitfix_specimen_photos/R000000...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>6f5bc099-ff55-4740-8a2f-e63466b47892</td>\n",
+       "      <td>../data/raw/DOE-nitfix_specimen_photos/R000000...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                              sample_id  \\\n",
+       "0  6fcdf583-e9bb-4764-84de-f277cc6ec6b7   \n",
+       "1  6fa18219-4958-4d75-8bf3-032fa909315c   \n",
+       "2  6f93bea8-43f4-45ad-95f5-ecad63f13037   \n",
+       "3  6f66cc88-3583-4e9b-97ea-03b1d681def8   \n",
+       "4  6f5bc099-ff55-4740-8a2f-e63466b47892   \n",
+       "\n",
+       "                                           file_name  \n",
+       "0  ../data/raw/DOE-nitfix_specimen_photos/R000000...  \n",
+       "1  ../data/raw/DOE-nitfix_specimen_photos/R000000...  \n",
+       "2  ../data/raw/DOE-nitfix_specimen_photos/R000000...  \n",
+       "3  ../data/raw/DOE-nitfix_specimen_photos/R000000...  \n",
+       "4  ../data/raw/DOE-nitfix_specimen_photos/R000000...  "
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "csv_name = 'images.csv'\n",
+    "\n",
+    "df = pd.read_sql('SELECT * FROM images', CXN)\n",
+    "\n",
+    "csv_path = PROCESSED_DATA / csv_name\n",
+    "df.to_csv(csv_path, index=False)\n",
+    "\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>error_key</th>\n",
+       "      <th>msg</th>\n",
+       "      <th>ok</th>\n",
+       "      <th>resolution</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>../data/raw/DOE-nitfix_specimen_photos/R000014...</td>\n",
+       "      <td>DUPLICATES: Files ../data/raw/DOE-nitfix_speci...</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>OK: Genuine duplicate</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>../data/raw/DOE-nitfix_specimen_photos/R000015...</td>\n",
+       "      <td>DUPLICATES: Files ../data/raw/DOE-nitfix_speci...</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>OK: Genuine duplicate</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>../data/raw/DOE-nitfix_specimen_photos/R000015...</td>\n",
+       "      <td>DUPLICATES: Files ../data/raw/DOE-nitfix_speci...</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>OK: Genuine duplicate</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>../data/raw/DOE-nitfix_specimen_photos/R000016...</td>\n",
+       "      <td>DUPLICATES: Files ../data/raw/DOE-nitfix_speci...</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>OK: Genuine duplicate</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>../data/raw/DOE-nitfix_specimen_photos/R000067...</td>\n",
+       "      <td>DUPLICATES: Files ../data/raw/DOE-nitfix_speci...</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>OK: Is a duplicate of R0000473</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                           error_key  \\\n",
+       "0  ../data/raw/DOE-nitfix_specimen_photos/R000014...   \n",
+       "1  ../data/raw/DOE-nitfix_specimen_photos/R000015...   \n",
+       "2  ../data/raw/DOE-nitfix_specimen_photos/R000015...   \n",
+       "3  ../data/raw/DOE-nitfix_specimen_photos/R000016...   \n",
+       "4  ../data/raw/DOE-nitfix_specimen_photos/R000067...   \n",
+       "\n",
+       "                                                 msg   ok  \\\n",
+       "0  DUPLICATES: Files ../data/raw/DOE-nitfix_speci...  1.0   \n",
+       "1  DUPLICATES: Files ../data/raw/DOE-nitfix_speci...  1.0   \n",
+       "2  DUPLICATES: Files ../data/raw/DOE-nitfix_speci...  1.0   \n",
+       "3  DUPLICATES: Files ../data/raw/DOE-nitfix_speci...  1.0   \n",
+       "4  DUPLICATES: Files ../data/raw/DOE-nitfix_speci...  1.0   \n",
+       "\n",
+       "                       resolution  \n",
+       "0           OK: Genuine duplicate  \n",
+       "1           OK: Genuine duplicate  \n",
+       "2           OK: Genuine duplicate  \n",
+       "3           OK: Genuine duplicate  \n",
+       "4  OK: Is a duplicate of R0000473  "
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "csv_name = 'errors.csv'\n",
+    "\n",
+    "df = pd.read_sql('SELECT * FROM errors', CXN)\n",
+    "\n",
+    "csv_path = PROCESSED_DATA / csv_name\n",
+    "df.to_csv(csv_path, index=False)\n",
+    "\n",
+    "df.head()"
    ]
   },
   {
