--- a/notebooks/ingest_dropbox.ipynb
+++ b/notebooks/ingest_dropbox.ipynb
@@ -33,7 +33,8 @@
     "load_dotenv(find_dotenv())\n",
     "\n",
     "CXN = db.connect()\n",
-    "INTERIM_DATA = Path('..') / 'data' / 'interim'"
+    "INTERIM_DATA = Path('..') / 'data' / 'interim'\n",
+    "PROCESSED_DATA = Path('..') / 'data' / 'processed'"
    ]
   },
   {
@@ -56,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -275,13 +276,15 @@
        "[5 rows x 28 columns]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "csv_path = str(INTERIM_DATA / 'nitfix01.csv')\n",
+    "file_name = 'nitfix01.csv'\n",
+    "\n",
+    "csv_path = str(INTERIM_DATA / file_name)\n",
     "dbx_path = 'id:zSBrtnqOfSAAAAAAAAAAKw/5657_Nit_Fix_I.reconcile.4.2.csv'\n",
     "\n",
     "file_metadata = dbx.files_download_to_file(csv_path, dbx_path)\n",
@@ -302,28 +305,18 @@
     "\n",
     "df.to_sql('reconciled', CXN, if_exists='replace')\n",
     "\n",
+    "csv_path = PROCESSED_DATA / file_name\n",
+    "df.to_csv(csv_path, index=False)\n",
+    "\n",
     "df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'state_province'"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "re.sub(r'[^a-z0-9_]+', '_', 'State/Province'.lower())"
-   ]
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
