Update taxon sample ID table name

--- a/notebooks/ingest_google_sheets.ipynb
+++ b/notebooks/ingest_google_sheets.ipynb
@@ -219,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -305,13 +305,13 @@
        "4       Begonia aptera  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "csv_name = 'taxon_ids.csv'\n",
+    "csv_name = 'taxon_sample_ids.csv'\n",
     "\n",
     "taxons = []\n",
     "for key, taxon in taxonomy.iterrows():\n",
@@ -326,7 +326,7 @@
     "\n",
     "df = pd.DataFrame(taxons)\n",
     "\n",
-    "df.to_sql('taxon_ids', CXN, if_exists='replace')\n",
+    "df.to_sql('taxon_sample_ids', CXN, if_exists='replace')\n",
     "\n",
     "csv_path = PROCESSED_DATA / csv_name\n",
     "df.to_csv(csv_path, index=False)\n",
